cmake_minimum_required(VERSION 3.17)
project(DataStruct)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(leetcode)

add_executable(DataStruct
        leetcode/subarraysWithKDistinct.cpp
        hello.c
        leetcode/lengthOfLongestSubstring.cpp
        leetcode/minWindow.cpp
        leetcode/maxSlidingWindow.cpp
        leetcode/longestSubstring.cpp
        leetcode/lengthOfLongestSubstringTwoDistinct.cpp
        leetcode/lengthOfLongestSubstringKDistinct.cpp
        leetcode/characterReplacement.cpp
        leetcode/medianSlidingWindow.cpp
        leetcode/checkInclusion.cpp
        leetcode/maxTurbulenceSize.cpp
        leetcode/minKBitFlips.cpp
        leetcode/longestOnes.cpp
        leetcode/numMovesStonesII.cpp
        leetcode/maxSatisfied.cpp
        leetcode/numSubmatrixSumTarget.cpp
        leetcode/equalSubstring.cpp
        leetcode/maxScore.cpp
        leetcode/longestSubarray.cpp
        leetcode/maxVowels.cpp
        leetcode/numSubseq.cpp
        leetcode/findMaxValueOfEquation.cpp
        leetcode/minOperations.cpp
        leetcode/MaxQueue.cpp
        leetcode/MaxQueue.h
        leetcode/shortestSeq.cpp
        leetcode/getKthFromEnd.cpp
        leetcode/kthToLast.cpp
        leetcode/reverseString.cpp
        leetcode/intersection.cpp
        leetcode/sortedSquares.cpp
        leetcode/moveZeroes.cpp
        leetcode/maxAscendingSum.cpp
        leetcode/removeElement.cpp
        leetcode/twoSum.cpp
        leetcode/merge.cpp
        leetcode/intersect.cpp
        leetcode/removeDuplicates.cpp
        leetcode/backspaceCompare.cpp
        leetcode/romanToInt.cpp
        leetcode/reverseVowels.cpp
        leetcode/hasCycle.cpp
        leetcode/isPalindrome.cpp
        leetcode/isPalindrome_string.cpp
        leetcode/strStr.cpp
        leetcode/isLongPressedName.cpp
        leetcode/invertTree.cpp
        leetcode/connect.cpp
        leetcode/flatten.cpp
        leetcode/TreeNode.h
        leetcode/constructMaximumBinaryTree.cpp
        leetcode/buildTree_1.cpp
        leetcode/buildTree_2.cpp
        leetcode/findDuplicateSubtrees.cpp
        leetcode/kthSmallest.cpp
        leetcode/convertBST.cpp
        leetcode/isValidBST.cpp
        leetcode/searchBST.cpp
        leetcode/insertIntoBST.cpp
        leetcode/deleteNode.cpp
        leetcode/numTrees.cpp
        leetcode/generateTrees.cpp
        leetcode/inorderTraversal.cpp
        leetcode/convertBiNode.cpp
        leetcode/maxSumBST.cpp
        leetcode/balanceBST.cpp
        leetcode/fib.cpp
        leetcode/coinChange.cpp
        leetcode/minFallingPathSum.cpp
        leetcode/longestPalindromeSubseq.cpp
        leetcode/findTargetSumWays.cpp
        leetcode/minDistance.cpp
        leetcode/lengthOfLIS.cpp
        leetcode/maxSubArray.cpp
        leetcode/maxEnvelopes.cpp
        leetcode/longestCommonSubsequence.cpp
        leetcode/minimumDeleteSum.cpp
        leetcode/canPartition.cpp
        leetcode/change.cpp
        leetcode/eraseOverlapIntervals.cpp
        leetcode/findMinArrowShots.cpp
        leetcode/canJump.cpp
        leetcode/jump.cpp
        leetcode/minPathSum.cpp
        leetcode/calculateMinimumHP.cpp
        leetcode/findRotateSteps.cpp
        leetcode/isMatch.cpp 
        leetcode/superEggDrop.cpp 
        leetcode/maxCoins.cpp 
        leetcode/stoneGame.cpp 
        leetcode/maxA.cpp 
        leetcode/maxProfit_1.cpp
        leetcode/maxProfit_2.cpp
        leetcode/maxProfit_3.cpp
        leetcode/maxProfit_4.cpp
        leetcode/maxProfit_5.cpp
        leetcode/maxProfit_6.cpp
        leetcode/rob_1.cpp
        leetcode/rob_2.cpp
        leetcode/rob_3.cpp
        leetcode/minInsertions.cpp)
